feat: implement user stat api
