# docs/swagger.json
@@ -211,7 +211,7 @@
         },
         "/users": {
             "get": {
-                "description": "Authorization header의 bearer token을 이용해 사용자를 조회함",
+                "description": "Authorization header의 bearer token을 이용해 사용자 통계를 조회함",
                 "consumes": [
                     "application/json"
                 ],
@@ -221,7 +221,7 @@
                 "tags": [
                     "user"
                 ],
-                "summary": "사용자 조회 API",
+                "summary": "사용자 통계 조회 API",
                 "parameters": [
                     {
                         "type": "string",
@@ -235,7 +235,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/entity.User"
+                            "$ref": "#/definitions/payloads.UserStatPayload"
                         }
                     }
                 }
@@ -467,6 +467,20 @@
                     "type": "string"
                 },
                 "userId": {
+                    "type": "integer"
+                }
+            }
+        },
+        "payloads.UserStatPayload": {
+            "type": "object",
+            "properties": {
+                "duration": {
+                    "type": "integer"
+                },
+                "memoCount": {
+                    "type": "integer"
+                },
+                "readCount": {
                     "type": "integer"
                 }
             }
